# learn-opengl

./: .gitignore  README.md  basic.frag  basic.vert  build.ninja  imgui.ini  main.cpp  meson.build
src/: basic.frag  basic.vert  camera.hpp  light.frag  main.cpp  mesh.hpp  model.hpp  normal.frag  shader.hpp  texture.hpp
subprojects/: assimp.wrap
